[package]
name = "pricer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
log = "0.4.21"
pretty_env_logger = "0.5.0"
reqwest = "0.12.4"
serde = {version = "1.0.198", features = ["derive"]}
serde_json = "1.0.70"
tf2-price = "0.13.1"
tf2-sku = "0.4.1"
tokio = {version="1.37.0", features=["full"]}
