[package]
name = "pricer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "*", features = ["rustls-tls-native-roots"] }
dotenvy = "0.15.7"
log = "0.4.21"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.70"
serde_with = "3.8.0"
tf2-price = "0.13.1"
tf2-sku = "0.4.1"
tokio = { version = "1.37.0", features = ["full"] }
tf-item-attributes = { path = "../tf-item-attributes" }
chrono = "0.4.38"
serde-aux = "4.5.0"
regex = "1.10.4"
futures-util = "0.3.30"
redis = { version = "0.25.3", features = ["tokio-comp"] }
